# hw8

./: load_data.py  models.py  pyproject.toml  search_quotes.py
