[tool.poetry]
name = "hw8"
version = "0.1.0"
description = ""
authors = ["g33kty <il3whenpquesmarkme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {version = "3.12", extras = ["srv", "tls"]}
mongoengine = "^0.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
